feat: enable SEO optimization on pages by adding missing tags

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,8 @@
 <div class="py-5"></div>
 
+<footer>
+    <p>Visit the main site: <a href="https://ekalaivan.net" target="_blank">Ekalaivan Chidambaram</a></p>
+</footer>
+
 {{ partial "sociallinks.html" .}}
 {{ partial "scripts.html" .}}
