--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,14 +9,14 @@
     <meta name="author" content="Ekalaivan Chidambaram">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:title" content="Ekalaivan Chidambaram Blogs - {{ .Params.title }}">
+    <meta property="og:title" content="{{ .Params.title }} - Ekalaivan Chidambaram Blogs">
     <meta property="og:description" content="{{ .Params.description }}">
     <meta property="og:url" content="https://blogs.ekalaivan.net/{{ .Params.url }}">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://blogs.ekalaivan.net/images/icon.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{{ .Title }}">
+    <meta name="twitter:title" content="{{ .Params.title }} - Ekalaivan Chidambaram Blogs">
     <meta name="twitter:description" content="{{ .Params.description }}">
     <meta name="twitter:image" content="https://blogs.ekalaivan.net/images/icon.jpg">
 
