--- a/static/css/site.css
+++ b/static/css/site.css
@@ -69,3 +69,27 @@ pre
   font-size: 1rem;
   font-style: italic;
 }
+
+a:hover .hover-arrow {
+    display: inline !important;
+    animation: slideIn 0.3s ease-out;
+    line-height: normal;
+    line-height: 0px;
+  }
+  
+  .hover-arrow {
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 0px;
+  }
+  
+  @keyframes slideIn {
+    from {
+      opacity: 0;
+      margin-left: 0;
+    }
+    to {
+      opacity: 1;
+      margin-left: 8px;
+    }
+  }
