--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <nav id="mainNav" class="navbar shadow fixed-top navbar-expand-md navbar-light bg-transparent">
     <div class="container">
         <a class="navbar-brand" href="/">
-            <img src="/images/icon.jpg" class="rounded-1" alt="" width="45" height="40" alt="icon" />
+            <img src="/images/icon.jpg" class="rounded-1" alt="Ekalaivan Chidambaram logo" width="45" height="40" />
             <strong class="text-white">Ekalaivan Chidambaram</strong>
         </a>
 
